2004-11-07  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems.rb,lib/rubygems/installer.rb,lib/rubygems/cache.rb
	lib/rubygems/remote_installer.rb,lib/rubygems/gem_commands.rb: 
	Fixes to make non-root installation work properly.  Still need to
	fix uninstallation.

2004-10-31  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/version.rb,test/test_version_comparison.rb: Patrick May's
	* post-install.rb: Patrick May's fix for rubygems lib not being found
	during install.

2004-10-29  Chad Fowler <chad@chadfowler.com>
	* packages/,pkgs,install.rb: renamed "packages" to "pkgs" to avoid
	* remote_installer.rb: Added user-agent reporting for remote
	operations
	* setup.rb,install.rb,bin/update_rubygems: removed install.rb and 
	added setup.rb and post-install.rb.  Changed update_rubygems so that
	params passed to it can be passed on to setup.rb
 	
2004-10-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb
	(Gem::Uninstaller::remove_executables): Corrected spelling of
	"addtion".

2004-10-24  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/version.rb (Gem::Version::Requirement::self): Now
	properly handles arrays of version constraints.

	* lib/rubygems/loadpath_manager.rb
	(Gem::LoadPathManager::Gem::Specification): Added comments
	describing the fast Spec class purpose. Added to_s to
	Gem::Specification (both fast and slow versions).
	(Gem::LoadPathManager.paths): Returns (cached) list of gem paths.
	(Gem::LoadPathManager::self): Refactored to use glob_over in
	search_loadpaths and search_gempaths.

	* lib/rubygems/installer.rb: Added some requires.

	* lib/rubygems/cache.rb (Gem::Cache::refresh): Fixed refresh! to
	call load_specification on the Cache class, not on itself.

	* lib/rubygems.rb (Gem::Exception::activate): added comments to
	activate.  Also made sure that partial name matches in the gem
	cache search were avoided.
	(Gem::Exception::clear_paths): Added code to clear the gem cache
	when reseting the gem paths.